storage/innobase/buf/buf0buf.c
@@ -3464,9 +3464,11 @@ buf_mark_space_corrupt(
 
 /********************************************************************//**
 Completes an asynchronous read or write request of a file page to or from
-the buffer pool. */
+the buffer pool.
+@return FALSE if the read or write request completed successfully, TRUE
+otherwise (page is corrupted). */
 UNIV_INTERN
-void
+ibool
 buf_page_io_complete(
 /*=================*/
 	buf_page_t*	bpage)	/*!< in: pointer to the block in question */
@@ -3593,7 +3595,7 @@ corrupt:
 				table as corrupted instead of crashing server */
 				if (bpage->space > TRX_SYS_SPACE
 				    && buf_mark_space_corrupt(bpage)) {
-					return;
+					return(TRUE);
 				} else {
 					fputs("InnoDB: Ending processing"
 					      " because of"
@@ -3683,6 +3685,8 @@ corrupt:
 
 	mutex_exit(buf_page_get_mutex(bpage));
 	buf_pool_mutex_exit(buf_pool);
+
+	return(FALSE);
 }
 
 /*********************************************************************//**
